--- a/app/flex_dashboard.Rmd
+++ b/app/flex_dashboard.Rmd
@@ -18,10 +18,8 @@ suppressPackageStartupMessages(library(leafpop))
 suppressPackageStartupMessages(library(DT))
 suppressPackageStartupMessages(library(flexdashboard))
 
-full_data <- read_rds("../data/processed/counties_mapping_data_simplified.rds") %>% 
-  filter(
-    state_name == "Virginia"
-  )
+full_data <- read_rds("../data/processed/counties_mapping_data_simplified.rds")
+metros <- read_rds("../data/processed/urban_areas_simplified.rds")
 ```
 
 
@@ -35,10 +33,13 @@ Inputs {.sidebar}
 
 ```{r}
 selectInput("state", "Choose a state:",
-      list(`East Coast` = list("VA", "NJ", "CT"),
-           `West Coast` = list("WA", "OR", "CA"),
-           `Midwest` = list("MN", "WI", "IA"))
+      full_data$state_name,
+      selected = "Virginia"
     )
+map_data <- full_data %>% 
+      filter(
+        state_name == "Virginia"
+      )
 ```
 
 
@@ -55,15 +56,6 @@ varSelectInput(
 ```
 
 
-**Optional overlays**
-
-```{r}
-checkboxInput("inputId1", "Aiports", value = FALSE, width = NULL)
-checkboxInput("inputId2", "Ports", value = FALSE, width = NULL)
-checkboxInput("inputId", "Show metro areas", value = FALSE, width = NULL)
-```
-
-
 
 Row 1 {data-height=650}
 -----------------------------------------------------------------------
@@ -71,29 +63,38 @@ Row 1 {data-height=650}
 ### Map
 
 ```{r}
-
-renderLeaflet(
+output$sotaMap <- renderLeaflet(
   {
-    factpal <- colorFactor(c("yellow", "green"), full_data$`Pollutant Grade`)
+    factpal <- colorFactor(c("yellow", "green"), map_data$`Pollutant Grade`)
     
-    leaflet(full_data) %>% 
-      addProviderTiles("Esri.WorldGrayCanvas") %>% 
+    leaflet(map_data) %>% 
+      setView(-77.8, 37.8, 7) %>%
+      addProviderTiles("Esri.WorldGrayCanvas") %>%
+      addMapPane("metro_areas", zIndex = 400) %>% 
+      addMapPane("pollution_counties", zIndex = 420) %>% 
+      addPolygons(
+        data = metros,
+        color = "black",
+        fillColor = "light grey",
+        group = "Metro Areas",
+        options = pathOptions(pane = "metro_areas")
+      ) %>%
+      hideGroup("Metro Areas") %>%
       addPolygons(
         # data = shape,
         label = ~county_name,
-        fillColor = ~ factpal(full_data$`Pollutant Grade`),
-        # layerId = ~COUNTYNS,
+        fillColor = ~ factpal(map_data$`Pollutant Grade`),
+        layerId = ~GEOID,
         opacity = 1,
         weight = 1,
         color = "white",
         dashArray = "3",
         fillOpacity = 0.5,
+        # bringToFront = TRUE,
+        options = pathOptions(pane = "pollution_counties"),
         popup = paste(
-          "County:", full_data$county_name,"<br>",
-          "Selected Grade:", full_data[[input$Grade]] ,"<br>",
-          "Amount of People Who Commute In:", full_data$commute_into,"<br>",
-          "Amount of People who Commute Out:", full_data$commute_out,"<br>",
-          "Amount of People who Commute Within:", full_data$commute_within
+          "County:", map_data$county_name,"<br>",
+          input$Grade, ":", map_data[[input$Grade]] ,"<br>"
           ),
         highlight = highlightOptions(
           weight = 5,
@@ -109,9 +110,22 @@ renderLeaflet(
         opacity = 0.7, 
         title = NULL,
         position = "bottomright"
-        )
+        ) %>%
+      addLabelOnlyMarkers(
+        lng = ~metros$long, 
+        lat = ~metros$lat, 
+        label = ~metros$name, 
+        labelOptions = labelOptions(noHide = T, direction = 'center', textOnly = T),
+        group = "Metro Areas",
+        options = pathOptions(pane = "metro_areas")
+        ) %>% 
+      addLayersControl(
+        overlayGroups = c("Metro Areas"),
+        options = layersControlOptions(collapsed = FALSE)
+      )
     }
   )
+leafletOutput("sotaMap")
 ```
 
 
@@ -119,18 +133,42 @@ Row 2 {data-height=350}
 -------
 
 
-### <Name of Information Box>
-    
-Possible information to go here:
+### County stats
 
-* county grades
+```{r}
+clicked_county <- reactive({
+  # print(input$sotaMap_shape_click)
+  if (is.null(input$sotaMap_shape_click$id) == FALSE){
+    county_stats <- map_data %>%
+      filter(GEOID == input$sotaMap_shape_click$id)
+    return(HTML(
+      "County information for:", county_stats$county_name,
+      "<br>Median house price: $", county_stats$median_house_value,
+      "<br>Median rent: $", county_stats$median_rent,
+      "<br>% of People who commute in:", 
+      round(100 * county_stats$`Number of workers from other counties who commute to work in the county` / county_stats$`Number of residents`),
+      "<br>% of People who commute to other counties:", 
+      round(100 * county_stats$`Number of resident workers who commute to work in other counties` / county_stats$`Number of residents`),
+      "<br>% of People who commute within county:", 
+      round(100 * county_stats$`Number of resident workers who commute within county` / county_stats$`Number of residents`)
+      ))
+  }
+  return(HTML("<p>Click on a county to display more information</p>"))
+})
+renderUI(clicked_county())
+```
 
-* transportation emission statistics
 
-* housing information
+<!-- Possible information to go here: -->
 
-* commuting information
-    
+<!-- * county grades -->
+
+<!-- * transportation emission statistics -->
+
+<!-- * housing information -->
+
+<!-- * commuting information -->
+
 ### Another box
 
 Ideas for content:
@@ -138,6 +176,7 @@ Ideas for content:
 * Glossary/definitions?
 * About the dashboard/ about us
 * Another visualization
+
 
 
 
@@ -150,18 +189,20 @@ Inputs {.sidebar}
 ### Pick two counties
 
 ```{r}
-selectInput("state1", "Choose a state:",
-      list(`East Coast` = list("Fairfax County", "NJ", "CT"),
-           `West Coast` = list("WA", "OR", "CA"),
-           `Midwest` = list("MN", "WI", "IA"))
+# county_options <- setNames(full_data$county_names, as.list(full_data$GEOID))
+```
+
+
+
+```{r}
+selectInput("county1", "Choose first county:",
+      full_data$GEOID
     )
 ```
 
 ```{r}
-selectInput("state2", "Choose a state:",
-      list(`East Coast` = list("Arlington County", "NJ", "CT"),
-           `West Coast` = list("WA", "OR", "CA"),
-           `Midwest` = list("MN", "WI", "IA"))
+selectInput("county2", "Choose second county:",
+      full_data$GEOID
     )
 ```
 
@@ -171,6 +212,13 @@ Row 1
 ### County 1
 
 * Information about county 1
+
+```{r}
+# full_data %>%
+#   filter(GEOID == input$county1) %>%
+#   pluck(median_rent)
+```
+
 
 Row 2
 ------------
@@ -207,3 +255,8 @@ DT::renderDataTable({
     pageLength = 25 #bPaginate = FALSE
   ))
 })
+```
+
+
+About
+======
